--- a/README.rmd
+++ b/README.rmd
@@ -2,7 +2,7 @@
 title: "Getting and Cleaning Data - Peer Assignment"
 author: "dumsim"
 date: "Saturday, April 25, 2015"
-output: word_document
+output: html_document
 ---
 ### Purpose
 To demonstrate working with and cleaning a data set.
@@ -14,7 +14,7 @@ Prepare tidy data from a Samsung Galaxy S smartphone accelerometer source data s
 The source data, source data codebook and readme can be foujnd at:
 https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip   
 
->*Davide Anguita, Alessandro Ghio, Luca Oneto, Xavier Parra and Jorge L. Reyes-Ortiz. Human Activity Recognition on Smartphones using a Multiclass Hardware-Friendly Support Vector Machine. International Workshop of Ambient Assisted Living (IWAAL 2012). Vitoria-Gasteiz, Spain. Dec 2012*  
+######*Davide Anguita, Alessandro Ghio, Luca Oneto, Xavier Parra and Jorge L. Reyes-Ortiz. Human Activity Recognition on Smartphones using a Multiclass Hardware-Friendly Support Vector Machine. International Workshop of Ambient Assisted Living (IWAAL 2012). Vitoria-Gasteiz, Spain. Dec 2012*  
 
 ### Ojective
 Utilizing the source data, create a single set of tidy data that presents, by category **Subject** by sub-category **Activity**, the average of each source data variables that contains means or standard deviations.
@@ -36,7 +36,7 @@ Utilizing the source data, create a single set of tidy data that presents, by ca
 
 ### Project Content
 
-- 'readme.docx'
-- 'codebook.txt': Shows information about the variables used from the source data
+- 'readme.html'
+- 'CodeBook.html': Shows information about the variables used from the source data
 - 'run_analysis.R': The R-script used to transform the source data set to the tidy data set
 - 'LICENSE': The MIT License and Copyright
